# vibevoice

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  autosend.py  build_app.sh  com.vibevoice.autosend.plist  com.vibevoice.pill.plist  engine.py  pyproject.toml  requirements.txt  vibevoice.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
tests/: test_app_bundle.py  test_contract.py
